--- a/dars.2.css
+++ b/dars.2.css
@@ -1,4 +1,35 @@
 .box{
-    text-shadow: 10px 10px 6px darkkhaki;
-    font-size: 100px;
+    width: 350px ;
+    height: 225px;
+    border: 2px solid ;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px;
+    margin: auto;
+    background: rgb(131,58,180);
+background: linear-gradient(338deg, rgba(131,58,180,1) 19%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 89%);
+
+}
+input{
+    /* margin: 0px 0px 0px 50px ; */
+    box-shadow: 2px 3px 5px  ;
+    background: rgb(131,58,180);
+background: linear-gradient(338deg, rgba(131,58,180,1) 19%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 89%);
+}
+label{
+    margin: 0px 0px 0px 90px ;
+    text-shadow: 4px 5px 5px ;
+}
+button{
+    background: rgb(131,58,180);
+background: linear-gradient(338deg, rgba(131,58,180,1) 19%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 89%);
+    margin: 0px 0px 0px 285px;
+    border-radius: 5px;
+    box-shadow: 4px 5px 5px;
+}
+h1{
+    text-shadow: 2px 3px 5px ;
+}
+body{
+    background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 }
